[gd_scene format=3 uid="uid://yr4ohwauns62"]

[ext_resource type="Texture2D" uid="uid://dk7v53g6c1dwd" path="res://background.jpg" id="1_06t4h"]
[ext_resource type="Script" uid="uid://qgxjpavuepfu" path="res://main_menu.gd" id="1_fu7sn"]
[ext_resource type="FontFile" uid="uid://danndm6eausyh" path="res://Super Wonder.ttf" id="2_7vrkn"]
[ext_resource type="Script" uid="uid://bl0pqyqh1lq4e" path="res://music_control.gd" id="4_glbon"]
[ext_resource type="AudioStream" uid="uid://co8ewsqi7t2f7" path="res://assets/sound/MA_Originals_CricketsAndSparrows_3.wav" id="4_jix8l"]
[ext_resource type="Script" uid="uid://euei4v1eyx0n" path="res://fullscreen_control.gd" id="5_nlkkf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7vrkn"]
texture = ExtResource("1_06t4h")
modulate_color = Color(0.65834004, 0.6583399, 0.6583399, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(0.17254902, 0.8666667, 0.101960786, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu7sn"]
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jix8l"]
bg_color = Color(0.17254902, 0.8666667, 0.101960786, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nlkkf"]
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glbon"]
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxLine" id="StyleBoxLine_jix8l"]
color = Color(1, 1, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_glbon"]
color = Color(0.13905817, 0, 0.9121103, 1)
thickness = 6

[node name="MainMenu" type="Control" unique_id=604102529]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fu7sn")

[node name="Panel" type="Panel" parent="." unique_id=2116382842]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_7vrkn")

[node name="Label" type="Label" parent="Panel" unique_id=475428127]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -366.0
offset_top = -148.0
offset_right = 376.0
offset_bottom = -67.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8980392)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 80
text = "Rebuild: The Lost World"
horizontal_alignment = 1

[node name="menu_button" type="VBoxContainer" parent="." unique_id=109888992]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -227.0
offset_top = 16.0
offset_right = 239.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Start" type="Button" parent="menu_button" unique_id=443087559]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
text = "PLAY"

[node name="Settings" type="Button" parent="menu_button" unique_id=595493286]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
text = "SETTINGS"

[node name="Quit" type="Button" parent="menu_button" unique_id=2046116012]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
text = "QUIT"

[node name="settings_view" type="Panel" parent="." unique_id=1118653355]
layout_mode = 0
offset_left = 289.0
offset_top = 276.0
offset_right = 883.0
offset_bottom = 587.0

[node name="Label" type="Label" parent="settings_view" unique_id=240160026]
layout_mode = 0
offset_right = 593.0
offset_bottom = 65.0
theme_override_font_sizes/font_size = 30
text = "SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="back_button" type="Button" parent="settings_view/Label" unique_id=1416610306]
layout_mode = 0
offset_left = 163.0
offset_top = 218.0
offset_right = 438.0
offset_bottom = 271.0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nlkkf")
theme_override_styles/hover = SubResource("StyleBoxFlat_glbon")
text = "BACK"

[node name="music_control" type="HSlider" parent="settings_view" unique_id=1498375883]
layout_mode = 0
offset_left = 166.0
offset_top = 50.0
offset_right = 436.0
offset_bottom = 102.0
theme_override_styles/slider = SubResource("StyleBoxLine_jix8l")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_glbon")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_glbon")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("4_glbon")
audio_bus_name = "Music"

[node name="Label2" type="Label" parent="settings_view" unique_id=984404840]
layout_mode = 0
offset_left = 82.0
offset_top = 60.0
offset_right = 169.0
offset_bottom = 103.0
theme_override_font_sizes/font_size = 20
text = "Music:"

[node name="fullscreen_control" type="CheckButton" parent="settings_view" unique_id=1228572467]
layout_mode = 0
offset_left = 78.0
offset_top = 110.0
offset_right = 451.0
offset_bottom = 146.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Fullscreen:"
script = ExtResource("5_nlkkf")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." unique_id=318337041]
stream = ExtResource("4_jix8l")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="menu_button/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="menu_button/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="menu_button/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="settings_view/Label/back_button" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="settings_view/music_control" to="settings_view/music_control" method="_on_value_changed"]
[connection signal="toggled" from="settings_view/fullscreen_control" to="settings_view/fullscreen_control" method="_on_toggled"]
